add the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first github project</title>
+    <link rel="stylesheet" href="styles/gblog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>
+            my first git website
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor assumenda esse laboriosam possimus? Adipisci commodi explicabo consequatur quo nihil excepturi, doloribus inventore accusantium ullam enim aperiam. Possimus excepturi fugit nobis.</p>
+    </div>
 </body>
 </html>
