--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
 </head>
 <body>
     <div>
-        <h3>
+        <h3 class="header">
             my first git website
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor assumenda esse laboriosam possimus? Adipisci commodi explicabo consequatur quo nihil excepturi, doloribus inventore accusantium ullam enim aperiam. Possimus excepturi fugit nobis.</p>
+    </div>
+     <div>
+        <h3 class="header">
+            my second git website
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor assumenda esse laboriosam possimus? Adipisci commodi explicabo consequatur quo nihil excepturi, doloribus inventore accusantium ullam enim aperiam. Possimus excepturi fugit nobis.</p>
+    </div>
+     <div>
+        <h3 class="header">
+            my third git website
         </h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor assumenda esse laboriosam possimus? Adipisci commodi explicabo consequatur quo nihil excepturi, doloribus inventore accusantium ullam enim aperiam. Possimus excepturi fugit nobis.</p>
     </div>
